--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -22,11 +22,14 @@ jobs:
       R_KEEP_PKG_SOURCE: yes
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out repository
+        uses: actions/checkout@v2
 
-      - uses: r-lib/actions/setup-pandoc@v2
+      - name: Install Pandoc
+        uses: r-lib/actions/setup-pandoc@v2
 
-      - uses: r-lib/actions/setup-r@v2
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.r }}
           http-user-agent: ${{ matrix.http-user-agent }}
@@ -37,6 +40,44 @@ jobs:
           extra-packages: any::rcmdcheck
           needs: check
 
-      - uses: r-lib/actions/check-r-package@v2
+      - name: Install TinyTex
+        #if: needs.get_configuration.outputs.need-tinytex == 'true'
+        uses: r-lib/actions/setup-tinytex@v2
+
+      - name: Install extra LaTeX packages
+        #if: needs.get_configuration.outputs.need-tinytex == 'true' 
+        run: |
+
+          # Install the tinytex R package to run tinytex::pdflatex.
+          install.packages('tinytex')
+
+          # Iterate through Rnw vignettes to find what LaTeX packages
+          # need to be installed and install them.
+
+          Rnw_files <- list.files('vignettes', pattern = '*.Rnw')
+          lapply(Rnw_files, function(Rnw_file) {
+            # Turn off evaluation of code chucks to avoid an error
+            # about BioCro not being installed:
+            knitr::opts_chunk$set(eval = FALSE)
+
+            # Build the LaTeX file but don't compile it yet:
+            xfun::in_dir('vignettes', tools::buildVignette(Rnw_file, latex = FALSE))
+
+            # Get the name of the LaTeX file just created:
+            LaTeX_file <- paste0(tools::file_path_sans_ext(Rnw_file), '.tex')
+
+            # Compile the LaTeX file using tinytex::pdflatex because
+            # this will automatically install any required LaTeX
+            # packages that may be missing from the default TinyTex
+            # installation.  These builds will likely fail (hence the
+            # "try()", but not before installing needed LaTeX
+            # packages:
+            try(xfun::in_dir('vignettes', tinytex::pdflatex(LaTeX_file)))
+          })
+
+        shell: Rscript {0}
+
+      - name: Check package
+        uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
