--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -9,13 +9,14 @@ jobs:
   R-CMD-check:
     name: Check R package on platform ${{ matrix.os }} using the ${{ matrix.r }} version of R
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.config.os }}
 
     strategy:
       fail-fast: false
-      matrix:
-        - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
-        - {os: ubuntu-latest,   r: 'release'}
+      matrix.config:
+        config:
+          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
+          - {os: ubuntu-latest,   r: 'release'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -31,8 +32,8 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: ${{ matrix.r }}
-          http-user-agent: ${{ matrix.http-user-agent }}
+          r-version: ${{ matrix.config.r }}
+          http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
 
       - uses: r-lib/actions/setup-r-dependencies@v2
