--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       fail-fast: false
-      matrix.config:
+      matrix:
         config:
           - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
           - {os: ubuntu-latest,   r: 'release'}
