Try out reusable workflow. Remove push triggers from all workflows. Change name of job in new-R-CMD-check.

--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -7,7 +7,7 @@ name: R-CMD-check-revised
 
 jobs:
   R-CMD-check:
-    name: Check R package on platform ${{ matrix.config.os }} using the ${{ matrix.config.r }} version of R
+    name: Check R package on ${{ matrix.config.os }} using R version ${{ matrix.config.r }}
 
     runs-on: ${{ matrix.config.os }}
 
