--- a/.github/workflows/run-package-checks.yaml
+++ b/.github/workflows/run-package-checks.yaml
@@ -200,4 +200,4 @@ jobs:
       run-tests: ${{ needs.get_configuration.outputs.run-tests }}
       check-examples: ${{ needs.get_configuration.outputs.check-examples }}
       check-vignettes: ${{ needs.get_configuration.outputs.check-vignettes }}
-      needs-tinytex: ${{ steps.check-if-tinytex-needed.outputs.need-tinytex }}
+      needs-tinytex: 'no'#${{ steps.check-if-tinytex-needed.outputs.need-tinytex }}
