--- a/.github/workflows/print-inputs.yaml
+++ b/.github/workflows/print-inputs.yaml
@@ -21,9 +21,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo "os ${{ inputs.os }}"
-          echo "r-version ${{ inputs.r-version }}"
-          echo "check-manual ${{ inputs.check-manual }}"
-          echo "run-tests ${{ inputs.run-tests }}"
-          echo "check-examples ${{ inputs.check-examples }}"
-          echo "needs-tinytex ${{ inputs.needs-tinytex }}"
+          echo os ${{ inputs.os }}
+          echo r-version ${{ inputs.r-version }}
+          echo check-manual ${{ inputs.check-manual }}
+          echo run-tests ${{ inputs.run-tests }}
+          echo check-examples ${{ inputs.check-examples }}
+          echo check-vignettes ${{ inputs.check-vignettes }}
+          echo needs-tinytex ${{ inputs.needs-tinytex }}
