--- a/.github/workflows/print-inputs.yaml
+++ b/.github/workflows/print-inputs.yaml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      matrix: ${{ fromJSON(${{ inputs.strategy-matrix }}) }}
+      matrix: ${{ fromJSON(inputs.strategy-matrix) }}
     steps:
       - run: |
           echo os ${{ matrix.os }}
