--- a/.github/workflows/run-package-checks.yaml
+++ b/.github/workflows/run-package-checks.yaml
@@ -53,7 +53,7 @@ jobs:
           # strategy matrix.  See https://jmespath.org/.
           filter:
             '[?contains(runOnEvent, `${{ github.event_name }}`)
-               || (config-name == `${{ github.event.inputs.platform-to-check }}`]'
+               || (config-name == `${{ github.event.inputs.platform-to-check }}`)]'
 
   # For debugging:
   display_matrix:
