--- a/.github/workflows/run-package-checks.yaml
+++ b/.github/workflows/run-package-checks.yaml
@@ -51,8 +51,8 @@ jobs:
 
           # This filter uses the JMESPath query language to modify the
           # strategy matrix.  See https://jmespath.org/.
-          filter:
-            '[?(config-name == `${{ github.event.inputs.platform-to-check }}`)]'
+          #filter:
+          #  '[?(config-name == `${{ github.event.inputs.platform-to-check }}`)]'
 
   # For debugging:
   display_matrix:
