--- a/.github/workflows/run-package-checks.yaml
+++ b/.github/workflows/run-package-checks.yaml
@@ -51,7 +51,8 @@ jobs:
 
           # This filter uses the JMESPath query language to modify the
           # strategy matrix.  See https://jmespath.org/.
-          #filter:
+          filter:
+            '[*]'
           #  '[?(config-name == `${{ github.event.inputs.platform-to-check }}`)]'
 
   # For debugging:
