--- a/.github/workflows/run-package-checks.yaml
+++ b/.github/workflows/run-package-checks.yaml
@@ -53,7 +53,8 @@ jobs:
           # This filter uses the JMESPath query language to modify the
           # strategy matrix.  See https://jmespath.org/.
           filter:
-            '[?configName == `${{ github.event.inputs.platform-to-check }}`]'
+            '[?configName == `${{ github.event.inputs.platform-to-check }}`
+                || `${{ github.event_name }} != \'workflow_dispatch\']'
 
   # For debugging:
   display_matrix:
