--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -104,14 +104,19 @@ jobs:
           echo "debug 2 ran"
 
       - name: debug 3
-        if: $${ inputs.check-vignettes }}
+        if: ${{ inputs.check-vignettes }}
         run: |
           echo "debug 3 ran"
 
       - name: debug 4
-        if: $${ inputs.check-vignettes == 'true' }}
+        if: ${{ inputs.check-vignettes == true }}
         run: |
           echo "debug 4 ran"
+
+      - name: debug 5
+        if: ${{ inputs.check-vignettes == 'true' }}
+        run: |
+          echo "debug 5 ran"
 
       - name: Install extra LaTeX packages
         if: inputs.check-vignettes
