--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -96,7 +96,9 @@ jobs:
         run: |
           echo "inputs.check-vignettes: ${{ inputs.check-vignettes }}"
           echo "inputs.check-vignettes == true: ${{ inputs.check-vignettes == true }}"
-          echo "inputs.check-vignettes == 'true': ${{ inputs.check-vignettes == 'true' }}"
+          echo "inputs.check-vignettes == 'true': ${{ inputs.check-vignettes == 'true' }}
+          echo "inputs.check-vignettes == false: ${{ inputs.check-vignettes == false }}"
+          echo "inputs.check-vignettes == 'false': ${{ inputs.check-vignettes == 'false' }}"
 
       - name: debug 2
         if: inputs.check-vignettes
@@ -117,6 +119,16 @@ jobs:
         if: ${{ inputs.check-vignettes == 'true' }}
         run: |
           echo "debug 5 ran"
+
+      - name: debug 6
+        if: ${{ inputs.check-vignettes == false }}
+        run: |
+          echo "debug 6 ran"
+
+      - name: debug 7
+        if: ${{ inputs.check-vignettes == 'false' }}
+        run: |
+          echo "debug 7 ran"
 
       - name: Install extra LaTeX packages
         if: inputs.check-vignettes
