[no ci] Install TeX for manual.

--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -24,7 +24,7 @@ on:
 name: R-CMD-check-revised
 
 env:
-  NEED_TEX: ${{ inputs.check-vignettes || github.event_name != 'workflow_dispatch' }}
+  NEED_TEX: ${{ inputs.check-manual || inputs.check-vignettes || github.event_name != 'workflow_dispatch' }}
 
 jobs:
 
