--- a/.github/workflows/new-R-CMD-check.yaml
+++ b/.github/workflows/new-R-CMD-check.yaml
@@ -196,12 +196,12 @@ jobs:
           }
 
           # serialize these vectors as strings:
-          build_args <- paste0("c('", paste(build_args_value, collapse = "', '"), "')")
+          build_args <- paste0('c("', paste(build_args_value, collapse = '", "'), '")')
           args <- paste0("c('", paste(args_value, collapse = "', '"), "')")
 
           # store these in the environment
-          system(sprintf('echo "BUILD_ARGS=%s" >> $GITHUB_ENV', build_args))
-          system(sprintf('echo "ARGS=%s" >> $GITHUB_ENV', args))
+          system(sprintf('echo "BUILD_ARGS='%s'" >> $GITHUB_ENV', build_args))
+          system(sprintf('echo "ARGS='%s'" >> $GITHUB_ENV', args))
         shell: Rscript {0}
 
       - name: Check package
